// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`explain: 'combo flush+straight (Jd Td / 9d 8c 2…' > copy snapshot 1`] = `
{
  "headMaths": {
    "quickNote": "outs × 4, done in your head",
    "quickSum": "21 × 4 = 84%",
    "trueNote": "What the deck actually does",
    "trueNumber": "69.9",
  },
  "memorise": [
    {
      "label": "15 outs",
      "value": "54%",
    },
    {
      "label": "8 · open-ender",
      "value": "31%",
    },
    {
      "label": "12 outs",
      "value": "45%",
    },
    {
      "label": "6 · overcards",
      "value": "24%",
    },
    {
      "label": "9 · flush draw",
      "value": "35%",
    },
    {
      "label": "4 · gutshot",
      "value": "17%",
    },
  ],
  "outsList": [
    "3d",
    "4d",
    "5d",
    "6d",
    "7s",
    "7h",
    "7d",
    "7c",
    "8d",
    "Ts",
    "Th",
    "Tc",
    "Js",
    "Jh",
    "Jc",
    "Qs",
    "Qh",
    "Qd",
    "Qc",
    "Kd",
    "Ad",
  ],
  "step1": {
    "body": "Nine diamonds make the flush, eight cards make the straight, and your jacks and tens pair for top pair on top. The diamonds that also complete the straight are counted once. Twenty-one outs.",
    "index": "01",
    "title": "Twenty-one outs — flush, straight, overcards",
  },
  "step2": {
    "body": "Each remaining card is roughly a 2% shot per out, and you get two of them. So outs × 4 is your chance of getting there by the river — the only arithmetic you need at the table.",
    "index": "02",
    "title": "Two cards to come, so multiply by 4",
  },
  "step3": {
    "body": "Past eight outs the ×4 runs hot: 21 × 4 says 84%, the deck says 70%. The fix is one subtraction — take off the outs above eight. 21 × 4 = 84, minus 13 = 71%. Within a point.",
    "index": "03",
    "title": "Where the shortcut drifts",
  },
  "subline": "A flush draw and an open-ended straight draw with two overcards · Flop · two cards to come",
  "title": "21 outs → 70%",
}
`;

exports[`explain: 'comboFlushOvercard / flush+overcard (…' > copy snapshot 1`] = `
{
  "headMaths": {
    "quickNote": "outs × 4, done in your head",
    "quickSum": "12 × 4 = 48%",
    "trueNote": "What the deck actually does",
    "trueNumber": "45.0",
  },
  "memorise": [
    {
      "label": "15 outs",
      "value": "54%",
    },
    {
      "label": "8 · open-ender",
      "value": "31%",
    },
    {
      "label": "12 outs",
      "value": "45%",
    },
    {
      "label": "6 · overcards",
      "value": "24%",
    },
    {
      "label": "9 · flush draw",
      "value": "35%",
    },
    {
      "label": "4 · gutshot",
      "value": "17%",
    },
  ],
  "outsList": [
    "2h",
    "3h",
    "4h",
    "5h",
    "6h",
    "9h",
    "Th",
    "Jh",
    "Kh",
    "As",
    "Ad",
    "Ac",
  ],
  "step1": {
    "body": "Nine hearts finish the flush. Three more aces give you top pair. Twelve outs.",
    "index": "01",
    "title": "Nine hearts plus three aces",
  },
  "step2": {
    "body": "Each remaining card is roughly a 2% shot per out, and you get two of them. So outs × 4 is your chance of getting there by the river — the only arithmetic you need at the table.",
    "index": "02",
    "title": "Two cards to come, so multiply by 4",
  },
  "step3": {
    "body": "Past eight outs the ×4 runs hot: 12 × 4 says 48%, the deck says 45%. The fix is one subtraction — take off the outs above eight. 12 × 4 = 48, minus 4 = 44%. Within a point.",
    "index": "03",
    "title": "Where the shortcut drifts",
  },
  "subline": "A flush draw with an overcard · Flop · two cards to come",
  "title": "12 outs → 45%",
}
`;

exports[`explain: 'doubleGutshot fixture (Jh 9c / Qd Ts …' > copy snapshot 1`] = `
{
  "headMaths": {
    "quickNote": "outs × 4, done in your head",
    "quickSum": "8 × 4 = 32%",
    "trueNote": "What the deck actually does",
    "trueNumber": "31.5",
  },
  "memorise": [
    {
      "label": "15 outs",
      "value": "54%",
    },
    {
      "label": "8 · open-ender",
      "value": "31%",
    },
    {
      "label": "12 outs",
      "value": "45%",
    },
    {
      "label": "6 · overcards",
      "value": "24%",
    },
    {
      "label": "9 · flush draw",
      "value": "35%",
    },
    {
      "label": "4 · gutshot",
      "value": "17%",
    },
  ],
  "outsList": [
    "8s",
    "8h",
    "8d",
    "8c",
    "Ks",
    "Kh",
    "Kd",
    "Kc",
  ],
  "step1": {
    "body": "Four eights make the low end, four kings make the high end. Both ends are live.",
    "index": "01",
    "title": "Eight cards finish the run",
  },
  "step2": {
    "body": "Each remaining card is roughly a 2% shot per out, and you get two of them. So outs × 4 is your chance of getting there by the river — the only arithmetic you need at the table.",
    "index": "02",
    "title": "Two cards to come, so multiply by 4",
  },
  "step3": null,
  "subline": "An open-ended straight draw · Flop · two cards to come",
  "title": "8 outs → 32%",
}
`;

exports[`explain: 'flushDraw (As 7s / Ks 4s 9d)' > copy snapshot 1`] = `
{
  "headMaths": {
    "quickNote": "outs × 4, done in your head",
    "quickSum": "12 × 4 = 48%",
    "trueNote": "What the deck actually does",
    "trueNumber": "45.0",
  },
  "memorise": [
    {
      "label": "15 outs",
      "value": "54%",
    },
    {
      "label": "8 · open-ender",
      "value": "31%",
    },
    {
      "label": "12 outs",
      "value": "45%",
    },
    {
      "label": "6 · overcards",
      "value": "24%",
    },
    {
      "label": "9 · flush draw",
      "value": "35%",
    },
    {
      "label": "4 · gutshot",
      "value": "17%",
    },
  ],
  "outsList": [
    "2s",
    "3s",
    "5s",
    "6s",
    "8s",
    "9s",
    "Ts",
    "Js",
    "Qs",
    "Ah",
    "Ad",
    "Ac",
  ],
  "step1": {
    "body": "Nine spades finish the flush. Three more aces give you top pair. Twelve outs.",
    "index": "01",
    "title": "Nine spades plus three aces",
  },
  "step2": {
    "body": "Each remaining card is roughly a 2% shot per out, and you get two of them. So outs × 4 is your chance of getting there by the river — the only arithmetic you need at the table.",
    "index": "02",
    "title": "Two cards to come, so multiply by 4",
  },
  "step3": {
    "body": "Past eight outs the ×4 runs hot: 12 × 4 says 48%, the deck says 45%. The fix is one subtraction — take off the outs above eight. 12 × 4 = 48, minus 4 = 44%. Within a point.",
    "index": "03",
    "title": "Where the shortcut drifts",
  },
  "subline": "A flush draw with an overcard · Flop · two cards to come",
  "title": "12 outs → 45%",
}
`;

exports[`explain: 'flushDrawTurn (As 7s / Ks 4s 9d 2c)' > copy snapshot 1`] = `
{
  "headMaths": {
    "quickNote": "outs × 2, done in your head",
    "quickSum": "12 × 2 = 24%",
    "trueNote": "What the deck actually does",
    "trueNumber": "26.1",
  },
  "memorise": [
    {
      "label": "15 outs",
      "value": "54%",
    },
    {
      "label": "8 · open-ender",
      "value": "31%",
    },
    {
      "label": "12 outs",
      "value": "45%",
    },
    {
      "label": "6 · overcards",
      "value": "24%",
    },
    {
      "label": "9 · flush draw",
      "value": "35%",
    },
    {
      "label": "4 · gutshot",
      "value": "17%",
    },
  ],
  "outsList": [
    "2s",
    "3s",
    "5s",
    "6s",
    "8s",
    "9s",
    "Ts",
    "Js",
    "Qs",
    "Ah",
    "Ad",
    "Ac",
  ],
  "step1": {
    "body": "Nine spades finish the flush. Three more aces give you top pair. Twelve outs.",
    "index": "01",
    "title": "Nine spades plus three aces",
  },
  "step2": {
    "body": "One card left means one chance, so the multiplier halves: outs × 2.",
    "index": "02",
    "title": "One card to come, so multiply by 2",
  },
  "step3": {
    "body": "×2 says 24%, the deck says 26% — 2.1 of a point out. Ignore it. What actually costs you money is an out that is not clean: a card that fills your flush and also fills villain’s straight is worth less than one out.",
    "index": "03",
    "title": "Where the shortcut drifts",
  },
  "subline": "A flush draw with an overcard · Turn · one card to come",
  "title": "12 outs → 26%",
}
`;

exports[`explain: 'genuine doubleGutshot (Kc 9d / Jh Td …' > copy snapshot 1`] = `
{
  "headMaths": {
    "quickNote": "outs × 4, done in your head",
    "quickSum": "11 × 4 = 44%",
    "trueNote": "What the deck actually does",
    "trueNumber": "41.7",
  },
  "memorise": [
    {
      "label": "15 outs",
      "value": "54%",
    },
    {
      "label": "8 · open-ender",
      "value": "31%",
    },
    {
      "label": "12 outs",
      "value": "45%",
    },
    {
      "label": "6 · overcards",
      "value": "24%",
    },
    {
      "label": "9 · flush draw",
      "value": "35%",
    },
    {
      "label": "4 · gutshot",
      "value": "17%",
    },
  ],
  "outsList": [
    "8s",
    "8h",
    "8d",
    "8c",
    "Qs",
    "Qh",
    "Qd",
    "Qc",
    "Ks",
    "Kh",
    "Kd",
  ],
  "step1": {
    "body": "A eight makes one straight, a queen makes another. Two separate inside draws — eleven outs, not four.",
    "index": "01",
    "title": "Two belly cards, eight outs",
  },
  "step2": {
    "body": "Each remaining card is roughly a 2% shot per out, and you get two of them. So outs × 4 is your chance of getting there by the river — the only arithmetic you need at the table.",
    "index": "02",
    "title": "Two cards to come, so multiply by 4",
  },
  "step3": {
    "body": "Past eight outs the ×4 runs hot: 11 × 4 says 44%, the deck says 42%. The fix is one subtraction — take off the outs above eight. 11 × 4 = 44, minus 3 = 41%. Within a point.",
    "index": "03",
    "title": "Where the shortcut drifts",
  },
  "subline": "A double gutshot with an overcard · Flop · two cards to come",
  "title": "11 outs → 42%",
}
`;

exports[`explain: 'gutshot (Qc Js / Th 8d 2c)' > copy snapshot 1`] = `
{
  "headMaths": {
    "quickNote": "outs × 4, done in your head",
    "quickSum": "10 × 4 = 40%",
    "trueNote": "What the deck actually does",
    "trueNumber": "38.4",
  },
  "memorise": [
    {
      "label": "15 outs",
      "value": "54%",
    },
    {
      "label": "8 · open-ender",
      "value": "31%",
    },
    {
      "label": "12 outs",
      "value": "45%",
    },
    {
      "label": "6 · overcards",
      "value": "24%",
    },
    {
      "label": "9 · flush draw",
      "value": "35%",
    },
    {
      "label": "4 · gutshot",
      "value": "17%",
    },
  ],
  "outsList": [
    "9s",
    "9h",
    "9d",
    "9c",
    "Jh",
    "Jd",
    "Jc",
    "Qs",
    "Qh",
    "Qd",
  ],
  "step1": {
    "body": "You need a nine — and no other rank helps. Four nines. Four outs.",
    "index": "01",
    "title": "Four nines and nothing else",
  },
  "step2": {
    "body": "Each remaining card is roughly a 2% shot per out, and you get two of them. So outs × 4 is your chance of getting there by the river — the only arithmetic you need at the table.",
    "index": "02",
    "title": "Two cards to come, so multiply by 4",
  },
  "step3": {
    "body": "Past eight outs the ×4 runs hot: 10 × 4 says 40%, the deck says 38%. The fix is one subtraction — take off the outs above eight. 10 × 4 = 40, minus 2 = 38%. Within a point.",
    "index": "03",
    "title": "Where the shortcut drifts",
  },
  "subline": "A gutshot with two overcards · Flop · two cards to come",
  "title": "10 outs → 38%",
}
`;

exports[`explain: 'openEnder (9h 8c / 7d 6s Kc)' > copy snapshot 1`] = `
{
  "headMaths": {
    "quickNote": "outs × 4, done in your head",
    "quickSum": "8 × 4 = 32%",
    "trueNote": "What the deck actually does",
    "trueNumber": "31.5",
  },
  "memorise": [
    {
      "label": "15 outs",
      "value": "54%",
    },
    {
      "label": "8 · open-ender",
      "value": "31%",
    },
    {
      "label": "12 outs",
      "value": "45%",
    },
    {
      "label": "6 · overcards",
      "value": "24%",
    },
    {
      "label": "9 · flush draw",
      "value": "35%",
    },
    {
      "label": "4 · gutshot",
      "value": "17%",
    },
  ],
  "outsList": [
    "5s",
    "5h",
    "5d",
    "5c",
    "Ts",
    "Th",
    "Td",
    "Tc",
  ],
  "step1": {
    "body": "Four fives make the low end, four tens make the high end. Both ends are live.",
    "index": "01",
    "title": "Eight cards finish the run",
  },
  "step2": {
    "body": "Each remaining card is roughly a 2% shot per out, and you get two of them. So outs × 4 is your chance of getting there by the river — the only arithmetic you need at the table.",
    "index": "02",
    "title": "Two cards to come, so multiply by 4",
  },
  "step3": null,
  "subline": "An open-ended straight draw · Flop · two cards to come",
  "title": "8 outs → 32%",
}
`;

exports[`explain: 'openEnder+set (5s 5d / 6h 7c 8d)' > copy snapshot 1`] = `
{
  "headMaths": {
    "quickNote": "outs × 4, done in your head",
    "quickSum": "10 × 4 = 40%",
    "trueNote": "What the deck actually does",
    "trueNumber": "38.4",
  },
  "memorise": [
    {
      "label": "15 outs",
      "value": "54%",
    },
    {
      "label": "8 · open-ender",
      "value": "31%",
    },
    {
      "label": "12 outs",
      "value": "45%",
    },
    {
      "label": "6 · overcards",
      "value": "24%",
    },
    {
      "label": "9 · flush draw",
      "value": "35%",
    },
    {
      "label": "4 · gutshot",
      "value": "17%",
    },
  ],
  "outsList": [
    "4s",
    "4h",
    "4d",
    "4c",
    "5h",
    "5c",
    "9s",
    "9h",
    "9d",
    "9c",
  ],
  "step1": {
    "body": "Four fours make the low end, four nines make the high end. Both ends are live.",
    "index": "01",
    "title": "Ten cards finish the run",
  },
  "step2": {
    "body": "Each remaining card is roughly a 2% shot per out, and you get two of them. So outs × 4 is your chance of getting there by the river — the only arithmetic you need at the table.",
    "index": "02",
    "title": "Two cards to come, so multiply by 4",
  },
  "step3": {
    "body": "Past eight outs the ×4 runs hot: 10 × 4 says 40%, the deck says 38%. The fix is one subtraction — take off the outs above eight. 10 × 4 = 40, minus 2 = 38%. Within a point.",
    "index": "03",
    "title": "Where the shortcut drifts",
  },
  "subline": "An open-ended straight draw · Flop · two cards to come",
  "title": "10 outs → 38%",
}
`;

exports[`explain: 'overcards (Ah Kc / 9d 7s 2h)' > copy snapshot 1`] = `
{
  "headMaths": {
    "quickNote": "outs × 4, done in your head",
    "quickSum": "6 × 4 = 24%",
    "trueNote": "What the deck actually does",
    "trueNumber": "24.1",
  },
  "memorise": [
    {
      "label": "15 outs",
      "value": "54%",
    },
    {
      "label": "8 · open-ender",
      "value": "31%",
    },
    {
      "label": "12 outs",
      "value": "45%",
    },
    {
      "label": "6 · overcards",
      "value": "24%",
    },
    {
      "label": "9 · flush draw",
      "value": "35%",
    },
    {
      "label": "4 · gutshot",
      "value": "17%",
    },
  ],
  "outsList": [
    "Ks",
    "Kh",
    "Kd",
    "As",
    "Ad",
    "Ac",
  ],
  "step1": {
    "body": "Both hole cards beat every card on this board. Three aces pair your ace, three kings pair your king. Either makes top pair. Six outs.",
    "index": "01",
    "title": "Three aces, three kings",
  },
  "step2": {
    "body": "Each remaining card is roughly a 2% shot per out, and you get two of them. So outs × 4 is your chance of getting there by the river — the only arithmetic you need at the table.",
    "index": "02",
    "title": "Two cards to come, so multiply by 4",
  },
  "step3": null,
  "subline": "Two overcards · Flop · two cards to come",
  "title": "6 outs → 24%",
}
`;

exports[`explain: 'overcards over three hearts (Ah Kd / …' > copy snapshot 1`] = `
{
  "headMaths": {
    "quickNote": "outs × 4, done in your head",
    "quickSum": "6 × 4 = 24%",
    "trueNote": "What the deck actually does",
    "trueNumber": "24.1",
  },
  "memorise": [
    {
      "label": "15 outs",
      "value": "54%",
    },
    {
      "label": "8 · open-ender",
      "value": "31%",
    },
    {
      "label": "12 outs",
      "value": "45%",
    },
    {
      "label": "6 · overcards",
      "value": "24%",
    },
    {
      "label": "9 · flush draw",
      "value": "35%",
    },
    {
      "label": "4 · gutshot",
      "value": "17%",
    },
  ],
  "outsList": [
    "Ks",
    "Kh",
    "Kc",
    "As",
    "Ad",
    "Ac",
  ],
  "step1": {
    "body": "Both hole cards beat every card on this board. Three aces pair your ace, three kings pair your king. Either makes top pair. Six outs.",
    "index": "01",
    "title": "Three aces, three kings",
  },
  "step2": {
    "body": "Each remaining card is roughly a 2% shot per out, and you get two of them. So outs × 4 is your chance of getting there by the river — the only arithmetic you need at the table.",
    "index": "02",
    "title": "Two cards to come, so multiply by 4",
  },
  "step3": null,
  "subline": "Two overcards · Flop · two cards to come",
  "title": "6 outs → 24%",
}
`;

exports[`explain: 'pairImproving (Ah 9c / 9d 5s 2h)' > copy snapshot 1`] = `
{
  "headMaths": {
    "quickNote": "outs × 4, done in your head",
    "quickSum": "5 × 4 = 20%",
    "trueNote": "What the deck actually does",
    "trueNumber": "20.4",
  },
  "memorise": [
    {
      "label": "15 outs",
      "value": "54%",
    },
    {
      "label": "8 · open-ender",
      "value": "31%",
    },
    {
      "label": "12 outs",
      "value": "45%",
    },
    {
      "label": "6 · overcards",
      "value": "24%",
    },
    {
      "label": "9 · flush draw",
      "value": "35%",
    },
    {
      "label": "4 · gutshot",
      "value": "17%",
    },
  ],
  "outsList": [
    "9s",
    "9h",
    "As",
    "Ad",
    "Ac",
  ],
  "step1": {
    "body": "Two more nines give you trips. Three aces pair your ace — two pair. Five outs.",
    "index": "01",
    "title": "Two nines and three aces",
  },
  "step2": {
    "body": "Each remaining card is roughly a 2% shot per out, and you get two of them. So outs × 4 is your chance of getting there by the river — the only arithmetic you need at the table.",
    "index": "02",
    "title": "Two cards to come, so multiply by 4",
  },
  "step3": null,
  "subline": "A pair looking to improve · Flop · two cards to come",
  "title": "5 outs → 20%",
}
`;

exports[`explain: 'pure 4-out gutshot (6c 5s / 9h 8d 2c)' > copy snapshot 1`] = `
{
  "headMaths": {
    "quickNote": "outs × 4, done in your head",
    "quickSum": "4 × 4 = 16%",
    "trueNote": "What the deck actually does",
    "trueNumber": "16.5",
  },
  "memorise": [
    {
      "label": "15 outs",
      "value": "54%",
    },
    {
      "label": "8 · open-ender",
      "value": "31%",
    },
    {
      "label": "12 outs",
      "value": "45%",
    },
    {
      "label": "6 · overcards",
      "value": "24%",
    },
    {
      "label": "9 · flush draw",
      "value": "35%",
    },
    {
      "label": "4 · gutshot",
      "value": "17%",
    },
  ],
  "outsList": [
    "7s",
    "7h",
    "7d",
    "7c",
  ],
  "step1": {
    "body": "You need a seven — and no other rank helps. Four sevens. Four outs.",
    "index": "01",
    "title": "Four sevens and nothing else",
  },
  "step2": {
    "body": "Each remaining card is roughly a 2% shot per out, and you get two of them. So outs × 4 is your chance of getting there by the river — the only arithmetic you need at the table.",
    "index": "02",
    "title": "Two cards to come, so multiply by 4",
  },
  "step3": null,
  "subline": "A gutshot · Flop · two cards to come",
  "title": "4 outs → 17%",
}
`;

exports[`explain: 'setDraw (5s 5d / Kh Qc 8d)' > copy snapshot 1`] = `
{
  "headMaths": {
    "quickNote": "outs × 4, done in your head",
    "quickSum": "2 × 4 = 8%",
    "trueNote": "What the deck actually does",
    "trueNumber": "8.4",
  },
  "memorise": [
    {
      "label": "15 outs",
      "value": "54%",
    },
    {
      "label": "8 · open-ender",
      "value": "31%",
    },
    {
      "label": "12 outs",
      "value": "45%",
    },
    {
      "label": "6 · overcards",
      "value": "24%",
    },
    {
      "label": "9 · flush draw",
      "value": "35%",
    },
    {
      "label": "4 · gutshot",
      "value": "17%",
    },
  ],
  "outsList": [
    "5h",
    "5c",
  ],
  "step1": {
    "body": "You hold a pocket pair of fives. Two more fives are in the deck — either one makes a set. Two outs × 4 is 8% — memorise the five, not the formula.",
    "index": "01",
    "title": "Two fives to a set",
  },
  "step2": {
    "body": "Each remaining card is roughly a 2% shot per out, and you get two of them. So outs × 4 is your chance of getting there by the river — the only arithmetic you need at the table.",
    "index": "02",
    "title": "Two cards to come, so multiply by 4",
  },
  "step3": null,
  "subline": "A pair drawing to a set · Flop · two cards to come",
  "title": "2 outs → 8%",
}
`;
